# ChangeLog for sys-kernel/pf-sources
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/pf-sources/ChangeLog,v 1.59 2012/04/23 20:16:33 wired Exp $

*pf-sources-3.3.3 (23 Apr 2012)

  23 Apr 2012; Alex Alexander <wired@gentoo.org> +pf-sources-3.3.3.ebuild:
  version bump

  16 Apr 2012; Markos Chandras <hwoarang@gentoo.org>
  -pf-sources-3.2.1-r2.ebuild, -pf-sources-3.2.2.ebuild,
  -pf-sources-3.2.3.ebuild, -pf-sources-3.2.4.ebuild, -pf-sources-3.2.5.ebuild,
  -pf-sources-3.2.6.ebuild:
  remove old

*pf-sources-3.3.2 (16 Apr 2012)

  16 Apr 2012; Alex Alexander <wired@gentoo.org> +pf-sources-3.3.2.ebuild:
  version bump

*pf-sources-3.3.1 (10 Apr 2012)

  10 Apr 2012; Alex Alexander <wired@gentoo.org> +pf-sources-3.3.1.ebuild:
  version bump

*pf-sources-3.2.7 (19 Mar 2012)

  19 Mar 2012; Markos Chandras <hwoarang@gentoo.org> +pf-sources-3.2.7.ebuild:
  Version bump

*pf-sources-3.2.6 (06 Mar 2012)

  06 Mar 2012; Alex Alexander <wired@gentoo.org> +pf-sources-3.2.6.ebuild:
  version bump

*pf-sources-3.2.5 (16 Feb 2012)

  16 Feb 2012; Alex Alexander <wired@gentoo.org> +pf-sources-3.2.5.ebuild:
  version bump

*pf-sources-3.2.4 (08 Feb 2012)

  08 Feb 2012; Alex Alexander <wired@gentoo.org> +pf-sources-3.2.4.ebuild:
  version bump

*pf-sources-3.2.3 (04 Feb 2012)

  04 Feb 2012; Markos Chandras <hwoarang@gentoo.org> +pf-sources-3.2.3.ebuild:
  Version bump. Add note about option runtime dependencies. Bug #399541

*pf-sources-3.2.2 (27 Jan 2012)

  27 Jan 2012; Alex Alexander <wired@gentoo.org> +pf-sources-3.2.2.ebuild:
  version bump

*pf-sources-3.2.1-r2 (24 Jan 2012)
*pf-sources-3.1.6-r2 (24 Jan 2012)
*pf-sources-3.0.7-r2 (24 Jan 2012)

  24 Jan 2012; Alex Alexander <wired@gentoo.org>
  files/2100_proc-mem-handling-fix.patch, -pf-sources-3.0.7-r1.ebuild,
  +pf-sources-3.0.7-r2.ebuild, -pf-sources-3.1.6-r1.ebuild,
  +pf-sources-3.1.6-r2.ebuild, -pf-sources-3.2.1-r1.ebuild,